# FDF

./: CMakeLists.txt  Makefile  draw.c  draw_line.c  fdf  fdf.h  ft_check_num_and_color.c  ft_exit_error.c  ft_make_op.c  help_init.c  init.c  key_control.c  main.c  main_visu.c  mouse_control.c  transforming.c
fdf.dSYM/Contents/Resources/DWARF/: fdf
lib/: .ft_atoi.c.swp  .libft.h.swp  Makefile  ft_strnew.c  ft_strsplit.c  get_next_line.c  get_next_line.h  libft.h
test1/maps/: .42.fdf.swp
